[gd_scene load_steps=42 format=3 uid="uid://dy0dv105l384h"]

[ext_resource type="Script" uid="uid://cv6uben2kisue" path="res://granndi.gd" id="1_5quc7"]
[ext_resource type="Texture2D" uid="uid://y3dhnm8hoj3u" path="res://Artwork/2D_SL_Knight_v1.0/Attacks.png" id="2_de3c2"]
[ext_resource type="Texture2D" uid="uid://bgc13ufge3bqg" path="res://Artwork/2D_SL_Knight_v1.0/Death.png" id="3_2baiy"]
[ext_resource type="Texture2D" uid="uid://dmfvvfvv3oxxu" path="res://Artwork/2D_SL_Knight_v1.0/Hurt.png" id="4_f57vt"]
[ext_resource type="Texture2D" uid="uid://ddqwjcch2b8qp" path="res://Artwork/2D_SL_Knight_v1.0/Idle.png" id="5_e6kb8"]
[ext_resource type="Texture2D" uid="uid://bxv26ndgiqkpl" path="res://Artwork/2D_SL_Knight_v1.0/Run.png" id="6_uljg2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jkwvj"]
atlas = ExtResource("2_de3c2")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhchx"]
atlas = ExtResource("2_de3c2")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajnt"]
atlas = ExtResource("2_de3c2")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcc26"]
atlas = ExtResource("2_de3c2")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl0mb"]
atlas = ExtResource("2_de3c2")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_of1vv"]
atlas = ExtResource("2_de3c2")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yst3"]
atlas = ExtResource("2_de3c2")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybl1u"]
atlas = ExtResource("2_de3c2")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_38jlb"]
atlas = ExtResource("3_2baiy")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6kon"]
atlas = ExtResource("3_2baiy")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6cau"]
atlas = ExtResource("3_2baiy")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vexq"]
atlas = ExtResource("3_2baiy")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t47ee"]
atlas = ExtResource("4_f57vt")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eunhj"]
atlas = ExtResource("4_f57vt")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma3p7"]
atlas = ExtResource("4_f57vt")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb34w"]
atlas = ExtResource("5_e6kb8")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4gd3"]
atlas = ExtResource("5_e6kb8")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnpd7"]
atlas = ExtResource("5_e6kb8")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yij05"]
atlas = ExtResource("5_e6kb8")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcgk3"]
atlas = ExtResource("5_e6kb8")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_136en"]
atlas = ExtResource("5_e6kb8")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqmit"]
atlas = ExtResource("5_e6kb8")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig1ft"]
atlas = ExtResource("5_e6kb8")
region = Rect2(128, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb88g"]
atlas = ExtResource("6_uljg2")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mipcq"]
atlas = ExtResource("6_uljg2")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyxlw"]
atlas = ExtResource("6_uljg2")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji12m"]
atlas = ExtResource("6_uljg2")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg335"]
atlas = ExtResource("6_uljg2")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_niqk4"]
atlas = ExtResource("6_uljg2")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pjpm"]
atlas = ExtResource("6_uljg2")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eicq"]
atlas = ExtResource("6_uljg2")
region = Rect2(128, 192, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gjfx1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkwvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhchx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcc26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl0mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of1vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yst3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybl1u")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_38jlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6kon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6cau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vexq")
}],
"loop": false,
"name": &"Death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t47ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eunhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma3p7")
}],
"loop": false,
"name": &"Hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb34w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4gd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnpd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yij05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcgk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_136en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqmit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig1ft")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb88g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mipcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyxlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji12m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg335")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niqk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pjpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eicq")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5quc7"]
size = Vector2(28, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_de3c2"]
size = Vector2(86, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2baiy"]
size = Vector2(47, 82)

[node name="Granndi" type="CharacterBody2D"]
script = ExtResource("1_5quc7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-2, -28)
scale = Vector2(1.88281, 1.875)
sprite_frames = SubResource("SpriteFrames_gjfx1")
animation = &"Idle"
frame = 4
frame_progress = 0.917387

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -11)
shape = SubResource("RectangleShape2D_5quc7")

[node name="DeathCollision" type="CollisionShape2D" parent="."]
position = Vector2(16, 24.5)
shape = SubResource("RectangleShape2D_de3c2")
disabled = true

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="AttackCollision" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(36.5, -14)
shape = SubResource("RectangleShape2D_2baiy")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
